# charcter-maker

./: Cargo.toml  README.md
assets/: Basic stats for a monster.ini  base characters..ini  basic_character_stat.ini  character-maker.toml  characters.ini  stats.ini  tux.ini  tux_2.toml
gui/: mainview.fl
src/: data.rs  ini.rs  main.rs
